--- a/Challenges/ChallengeOne/style.css
+++ b/Challenges/ChallengeOne/style.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Red Hat Display', sans-serif;
     min-height: 100vh;
-    background-image: url(https://www.digitshack.com/codepen/mentor1/pattern-background-desktop.svg);
+    background-image: url(images/pattern-background-desktop.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-color: hsl(225, 100%, 94%);
@@ -113,7 +113,7 @@ a.cancel-btn:hover {
 
 @media only screen and (max-width: 425px) {
     body {
-        background-image: url(https://www.digitshack.com/codepen/mentor1/pattern-background-mobile.svg);
+        background-image: url(images/pattern-background-mobile.svg);
         font-size: 14px;
     }
     .container {
